--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "forest_ml", from = "./src"}]
 
 [tool.poetry.scripts]
 eda_report = "forest_ml.eda_report:eda_report"
+train = "forest_ml.train:train"
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -23,7 +24,6 @@ argparse = "^1.4.0"
 click = "^8.1.3"
 path = "^16.4.0"
 pathlib = "^1.0.1"
-sklearn = "^0.0"
 joblib = "^1.1.0"
 pandas-profiling = "^3.2.0"
 
